--- a/_publications/wei20213.md
+++ b/_publications/wei20213.md
@@ -1,12 +1,12 @@
 ---
-title: "Paper Title Number 4"
+title: "A 3-d printed halbach-cylinder motor with self-position sensing for precision motions"
 collection: publications
-permalink: /publication/2024-02-17-paper-title-number-4
-excerpt: 'This paper is about fixing template issue #693.'
-date: 2024-02-17
-venue: 'GitHub Journal of Bugs'
-paperurl: 'http://academicpages.github.io/files/paper3.pdf'
-citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
+permalink: #/publication/2024-02-17-paper-title-number-4
+excerpt: ''
+date: 2021-06-08
+venue: 'IEEE/ASME Transactions on Mechatronics'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/9448481'
+citation: 'Y. Wei, V. H. Nguyen, and W.-J. Kim, "A 3-d printed halbach-cylinder motor with self-position sensing for precision motions," IEEE/ASME Transactions on Mechatronics, vol. 27, no. 3, pp. 1489--1497, Jun. 2021.'
 ---
 
-The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
+This article presents the design and control of a new Halbach-array-based two-phase motor (HTM) with a 3-D printed coil mount and magnet housing for precision motion control applications. The motor is based on a two-pole Halbach cylinder that generates a uniform magnetic field within its inner diameter. Each pole has 10 magnet segments. This uniform field simplifies the Lorentz force calculation based on the volume integration. In addition, it allows for the real-time measurement of the rotor position based on Hall-effect sensors. Compared with conventional stepper motors and iron-core dc motors, this motor design can produce a continuous torque and precise positioning at any angular position without a cogging torque. In this article, the design of the motor together with its dynamics and control are presented. The design uses only one type of square-cross-section magnets that are readily available, making it easy to scale the design to a variety of sizes and torque capabilities. The 3-D printed stator and rotor housings allow for the motor to be constructed at a low cost in a short time. With a total magnet volume of only 30.7 cm 3 , a total effective coil volume of only 10.4 cm 3 , and a maximum current of 4 A, the maximum torque generated is 0.044 N·m. Experimental results with closed-loop control on a simple empirically identified plant model are provided to validate the magnetic design of the motor. The feedback signals are from two Hall-effect sensors connected to a microcontroller, offering a theoretical angular resolution of 0.16°. A minimum step size of 0.32° is demonstrated in positioning with closed-loop control. The motor has the capacity to track the commanded motion and speed with an error less than 0.64°.
