--- a/_publications/wei20213.md
+++ b/_publications/wei20213.md
@@ -5,7 +5,7 @@ permalink: #/publication/2024-02-17-paper-title-number-4
 excerpt: ''
 date: 2021-06-08
 venue: 'IEEE/ASME Transactions on Mechatronics'
-paperurl: 'https://ieeexplore.ieee.org/abstract/document/9448481', 'https://github.com/JET00wy/YuanWeiWebPage/blob/master/files/Automatic%20system%20design%20for%20flange%20surface%20quality%20inspection%20with%20a%20bionic%20motion%20vision%20paradigm.pdf'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/9448481'
 citation: 'Y. Wei, V. H. Nguyen, and W.-J. Kim, "A 3-d printed halbach-cylinder motor with self-position sensing for precision motions," IEEE/ASME Transactions on Mechatronics, vol. 27, no. 3, pp. 1489--1497, Jun. 2021.'
 ---
 
